# GEOMIND

./: GEOMIND.ipynb  README.md  pyproject.toml
cross_validation/: __init__.py  stratified_k_fold.py
data/: geopolymers_23_07.csv
data_preprocessing/: __init__.py
data_preprocessing/classification/: __init__.py  classify_mixture_families.py
data_preprocessing/normalization/: __init__.py  normalize.py
data_preprocessing/viscosity/: __init__.py  join.py  split.py
models/: __init__.py
models/neural_network/: NeuralNetworkModel.py  __init__.py
models/neural_network/feasibility_controller/: __init__.py
models/neural_network/feasibility_controller/molar/: __init__.py  mole_ratios.py
models/neural_network/formulator/: Formulator.py  __init__.py
models/neural_network/simulator/: Simulator.py  __init__.py
models/neural_network/trainer/: Trainer.py  __init__.py
plotting/: __init__.py  correlation.py  distribution.py  scatter_property.py
results/loss_curves/: perte_precurseurs.csv  perte_proprietes.csv  perte_simulator.csv  perte_validation_precurseurs.csv  perte_validation_proprietes.csv  perte_validation_simulator.csv
saved_models/Formulator/: fingerprint.pb  keras_metadata.pb  saved_model.pb
saved_models/Formulator/variables/: variables.data-00000-of-00001  variables.index
saved_models/Simulator/: fingerprint.pb  keras_metadata.pb  saved_model.pb
saved_models/Simulator/variables/: variables.data-00000-of-00001  variables.index
